# libact

./: .gitignore  .pdm-python  .pylintrc  .travis.yml  LICENSE  MANIFEST.in  README.md  environment.yml  meson.build  meson.options  pyproject.toml  requirements.txt  setup.py  setup_old.py
.devcontainer/: devcontainer.json
.github/workflows/: build_wheels.yml  linting.yml  tests.yml
docs/: .readthedocs.yaml  Makefile  active_learning_by_learning.rst  api_reference.rst  conf.py  cost_sensitive_multi_class.rst  cost_sensitive_multiclass.rst  dev_with_libact.rst  index.rst  libact.base.rst  libact.labelers.rst  libact.models.multilabel.rst  libact.models.rst  libact.query_strategies.multiclass.rst  libact.query_strategies.multilabel.rst  libact.query_strategies.rst  libact.rst  modules.rst  overview.rst  rtd-requirements.txt
docs/examples/: examples.rst  label_digits.rst  multilabel_active_learning.rst  plot.rst  plotpy.rst
examples/: README.txt  albl_new_strategies_benchmark.py  albl_plot.py  alce.py  alce_plot.py  get_dataset.py  label_digits.py  libact-issue-185.ipynb  multilabel_plot.py  plot.py  plot2.py  plot_albl.py  test_ideal_labeler.py
examples/query_by_comittee/: main.py
examples/uncertainty_sampling/: main.py
examples/variance_reduction/: .main.py.swp  main.py
libact/: __init__.py  meson.build
libact/base/: classifiers.py  dataset.py  interfaces.py  labelers.py  meson.build  models.py  query_strategies.py
libact/base/tests/: meson.build  test_dataset.py
libact/labelers/: __init__.py  ideal_labeler.py  interactive_labeler.py  jsre_labeler.py  meson.build
libact/labelers/tests/: meson.build  test_labelers.py
libact/models/: SVM.py  __init__.py  jsre.py  logistic_regression.py  meson.build  perceptron.py  sklearn_adapter.py  svm.py
libact/models/multilabel/: __init__.py  binary_relevance.py  dummy_clf.py  meson.build
libact/models/multilabel/tests/: meson.build  test_binary_relevance.py
libact/models/tests/: meson.build  test_logistic_regression.py  test_perceptron.py  test_sklearn_adapter.py  test_svm.py
libact/query_strategies/: __init__.py  _hintsvm.c  _hintsvm.pxd  _hintsvm.pyx  _variance_reduction.py  active_learning_by_learning.py  active_learning_with_cost_embedding.py  bald.py  coreset.py  density_weighted_meta.py  density_weighted_uncertainty_sampling.py  epsilon_uncertainty_sampling.py  expected_error_reduction.py  hintsvm.py  importance_weighted.py  information_density.py  mdsp.py  meson.build  query_by_committee.py  quire.py  random_sampling.py  setup.py  uncertainty_sampling.py  variance_reduction.c  variance_reduction.py
libact/query_strategies/multiclass/: __init__.py  active_learning_with_cost_embedding.py  expected_error_reduction.py  hierarchical_sampling.py  mdsp.py  meson.build
libact/query_strategies/multiclass/tests/: meson.build  test_hierarchical_sampling.py  test_iris.py
libact/query_strategies/multilabel/: __init__.py  adaptive_active_learning.py  binary_minimization.py  cost_sensitive_reference_pair_encoding.py  maximum_margin_reduction.py  meson.build  multilabel_quire.py  multilabel_with_auxiliary_learner.py  multilable_with_auxiliary_learner.py
libact/query_strategies/multilabel/tests/: meson.build  test_multilabel_quire.py  test_multilabel_realdata.py
libact/query_strategies/src/hintsvm/: libsvm_helper.c  libsvm_helper.h  svm.cpp  svm.h
libact/query_strategies/src/variance_reduction/: variance_reduction.c
libact/query_strategies/tests/: meson.build  test_bald.py  test_coreset.py  test_density_weighted_meta.py  test_epsilon_uncertainty_sampling.py  test_get_scores.py  test_hintsvm.py  test_information_density.py  test_iris.py  test_qs.py  test_quire.py  test_realdata.py  test_uncertainty_sampling.py  test_variance_reduction.py  utils.py
libact/utils/: __init__.py  meson.build
libact/utils/multilabel/: __init__.py  meson.build
libact/utils/tests/: meson.build  test_criteria.py
