option(
    'blas',
    type: 'string',
    value: 'auto',
    description: 'option for BLAS library switching',
)
option(
    'lapack',
    type: 'string',
    value: 'auto',
    description: 'option for LAPACK library switching',
)

# Optional features (enabled by default)
# These features require BLAS/LAPACK libraries
# If BLAS/LAPACK are not found, they will be automatically disabled with a warning
option(
    'variance_reduction',
    type: 'boolean',
    value: true,
    description: 'Build libact.query_strategies._variance_reduction (default: enabled, requires BLAS/LAPACK)',
)
option(
    'hintsvm',
    type: 'boolean',
    value: true,
    description: 'Build libact.query_strategies._hintsvm (default: enabled, requires BLAS/LAPACK)',
)