[build-system]
build-backend = "mesonpy"
requires = ["meson-python>=0.16", "ninja", "cython", "numpy", "scipy-openblas32>=0.3.27; platform_system=='Darwin'"]

[project]
name = "libact"
version = "0.1.6"
description = "Pool-based active learning in Python"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Y.-Y. Yang", email = "b01902066@csie.ntu.edu.tw" },
    { name = "S.-C. Lee", email = "b01902010@csie.ntu.edu.tw" },
    { name = "Y.-A. Chung", email = "b01902040@csie.ntu.edu.tw" },
    { name = "T.-E. Wu", email = "r00942129@ntu.edu.tw" },
    { name = "H.-T. Lin", email = "htlin@csie.ntu.edu.tw" },
]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=2",
    "scipy>=1.13",
    "scikit-learn>=1.6",
    "matplotlib>=3.8",
    "joblib==1.5.1",
]

[project.urls]
Homepage = "https://github.com/ntucllab/libact"
Repository = "https://github.com/ntucllab/libact"

[project.optional-dependencies]
dev = ["build>=1.2.2.post1", "meson>=1.5.0", "ninja", "cython", "numpy"]

# Build wheels

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-*"

# Skip musllinux (Alpine) and PyPy
skip = "*-musllinux_* pp*"

# Test the wheel after building
test-command = "python -c 'import libact; from libact.query_strategies import HintSVM, VarianceReduction; print(\"✓ All modules imported successfully\")'"
test-requires = [
    "numpy>=2",
    "scipy>=1.13",
    "scikit-learn>=1.6",
    "matplotlib>=3.8",
]

# Catch all import failures
test-skip = ""

[tool.cibuildwheel.linux]

archs = ["x86_64", "aarch64"]

manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

before-all = [
    "dnf install -y openblas-devel lapack-devel pkg-config",  # AlmaLinux uses dnf, not yum
]

environment = { PKG_CONFIG_PATH="/usr/lib64/pkgconfig:/usr/lib/pkgconfig" }

# Bundle OpenBLAS libraries into the wheel
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
# Build for both Intel and Apple Silicon
archs = ["x86_64", "arm64"]

before-build = [
    "python -c 'from scipy_openblas32 import get_pkg_config; open(\"/tmp/scipy-openblas.pc\", \"w\").write(get_pkg_config())'",
    "python -c 'from scipy_openblas32 import get_include; import os; print(f\"LAPACK headers: {get_include()}\")'",
]

# pkg-config paths for both Intel (/usr/local) and ARM (/opt/homebrew)
environment = {PKG_CONFIG_PATH="/tmp"}

# Use delocate to bundle OpenBLAS into wheel
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]

archs = ["AMD64"]

# GitHub Actions Windows runners have chocolatey pre-installed
before-all = ["choco install -y openblas pkg-config"]

# Install delvewheel for bundling DLLs into the wheel
before-build = "pip install delvewheel"

# Use delvewheel to find and bundle OpenBLAS DLLs
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

environment = { PKG_CONFIG_PATH = "C:\\tools\\openblas\\lib\\pkgconfig" }
