py_src = [
  '__init__.py',
  'adaptive_active_learning.py',
  'binary_minimization.py',
  'cost_sensitive_reference_pair_encoding.py',
  'maximum_margin_reduction.py',
  'multilabel_with_auxiliary_learner.py',
]

py.install_sources(
  py_src,
  subdir: 'libact/query_strategies/multilabel',
)

subdir('tests')
