py_src = [
  '__init__.py',
  'test_bald.py',
  'test_coreset.py',
  'test_density_weighted_meta.py',
  'test_epsilon_uncertainty_sampling.py',
  'test_hintsvm.py',
  'test_information_density.py',
  'test_quire.py',
  'test_realdata.py',
  'test_uncertainty_sampling.py',
  'test_variance_reduction.py',
  'utils.py',
]

py.install_sources(
  py_src,
  subdir: 'libact/query_strategies/tests',
)
